--- a/contacto.html
+++ b/contacto.html
@@ -5,18 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fibropctica SA | Contacto</title>
+    <link rel="stylesheet" href="css/estilos.css"/>
 <head/>       
-    <body>
+<body>
             <H1>Fibropctica SA </H1>
-            <header>
-                <nav>
-                    <ul>
-                        <li><a href="index.htm">Inicio</a></li>     
-                        <li><a href="nuestraobras.html">Nuestras Obras</a></li>
-                        <li><a href="nuestrosclientes.html">Nuestros Clientes</a></li>
-                    </ul>
-                </nav>
-            </header>            
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.htm">Inicio</a></li>     
+                <li><a href="nuestraobras.html">Nuestras Obras</a></li>
+                <li><a href="nuestrosclientes.html">Nuestros Clientes</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <img src="imagenes/logoempresa.jpg"/>
+        </div>
+    </main>           
     <footer>
 
                 <h2>Ubicacion</h2>
@@ -24,12 +30,13 @@
                  <p>Nuestra oficina se encuentra ubicada en Los Notros 155 - Villa la Angostura - Neuquen</p>
                  <p>fibropticasa@gmail.com</p>
                  <p>+5492944248150</p>
-                 <p></p>
+                 <p>Derechos Reservados Guillermo Peveri 2021</p>
+
          
                  <div>  
                      <ul>
-                         <li><a href="">Instagram</a></li>
-                         <li><a href="">Facebook</a></li>
+                        <<li><a href="https://instagram.com/fibroptica?utm_medium=copy-link/" target="_blanck">Instagram</a></li>
+                        <li><a href="https://es-la.facebook.com/pg/FibropTica/posts/" target="_blanck">Facebook</a></li>
                      </ul>    
                  </div>    
     </footer>     
