--- a/nuestraobras.html
+++ b/nuestraobras.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
     <H1>Fibropctica SA - Obras</H1>
@@ -18,7 +19,11 @@
         </nav>
     </header>
             
-<main>
+    <main>
+        <div>
+            <img src="imagenes/logoempresa.jpg"/>
+        </div>
+
         <section>
             <h2>Obras en imagenes</h2>
 
@@ -27,23 +32,23 @@
             <img src="imagenes/20191112_122128.jpg" width="400"height="500">
             <img src="imagenes/20191112_155911.jpg" width="400"height="500">
         </section>
-</main>       
+    </main>       
 
-<footer>
+    <footer>
 
     <h2>Ubicacion</h2>
     
-     <p>Nuestra oficina se encuentra ubicada en Los Notros 155 - Villa la Angostura - Neuquen</p>
-     <p>fibropticasa@gmail.com</p>
-     <p>+5492944248150</p>
-     <p></p>
+         <p>Nuestra oficina se encuentra ubicada en Los Notros 155 - Villa la Angostura - Neuquen</p>
+         <p>fibropticasa@gmail.com</p>
+         <p>+5492944248150</p>
+         <p>Derechos Reservados Guillermo Peveri 2021</p>
 
-     <div>  
-         <ul>
-             <li><a href="">Instagram</a></li>
-             <li><a href="">Facebook</a></li>
-         </ul>    
-     </div>    
- </footer>     
+        <div>  
+            <ul>
+                <<li><a href="https://instagram.com/fibroptica?utm_medium=copy-link/" target="_blanck">Instagram</a></li>
+                        <li><a href="https://es-la.facebook.com/pg/FibropTica/posts/" target="_blanck">Facebook</a></li>
+            </ul>    
+        </div>    
+    </footer>     
 </body>
 </html>
