--- a/nuestrosclientes.html
+++ b/nuestrosclientes.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fibropctica SA | Nuestros Clientes</title>
+    <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
     <H1>Fibropctica SA Clientes</H1>
@@ -19,6 +20,10 @@
         </nav>
     </header>
     <main>
+        <div>
+            <img src="imagenes/logoempresa.jpg"/>
+        </div>
+
     <h2>Confian en nosotros las siguientes Enpresas y Organismos Oficiales:</h2>
 
         <div>
@@ -40,12 +45,13 @@
          <p>Nuestra oficina se encuentra ubicada en Los Notros 155 - Villa la Angostura - Neuquen</p>
          <p>fibropticasa@gmail.com</p>
          <p>+5492944248150</p>
-         <p></p>
+         <p>Derechos Reservados Guillermo Peveri 2021</p>
+
  
          <div>  
              <ul>
-                 <li><a href="">Instagram</a></li>
-                 <li><a href="">Facebook</a></li>
+                <<li><a href="https://instagram.com/fibroptica?utm_medium=copy-link/" target="_blanck">Instagram</a></li>
+                        <li><a href="https://es-la.facebook.com/pg/FibropTica/posts/" target="_blanck">Facebook</a></li>
              </ul>    
          </div>    
      </footer>     
