ultima version pagina web

--- a/nuestrosclientes.html
+++ b/nuestrosclientes.html
@@ -28,12 +28,12 @@
     <h2 class="h2">Confian en nosotros las siguientes Enpresas y Organismos Oficiales:</h2>
     <br>
     <br>
-        <div>
+        <div class="flexbox">
             <img class= "clientes" src="clientes/patsat.jpg">
-            <img class= "clientes" src="clientes/laanonima.png">
+            <img class= "clientes" src="clientes/trex.png">            
             <img class= "clientes" src="clientes/netpatagon.png">
             <img class= "clientes" src="clientes/suptrodo.png">
-            <img class= "clientes" src="clientes/trex.png">
+            <img class= "clientes" src="clientes/laanonima.png">
             <img class= "clientes" src="clientes/epas.png">
             <img class= "clientes" src="clientes/epen.jpg">
             <img class= "clientes" src="clientes/optic.jpg">
