--- a/nuestrasobras.html
+++ b/nuestrasobras.html
@@ -28,14 +28,19 @@
     <main>
         
         <section class="py=10">
-            <div class="container">
+            <div class="container-fluid">
             <h2 class="h2">Obras en imagenes</h2>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 row-cols-md-4">
             <img class="obras" src="imagenes/20191111_123728.jpg" width="400" height="500">
             <img class="obras" src="imagenes/20191112_121034.jpg" width="400" height="500">
             <img class="obras" src="imagenes/20191112_122128.jpg" width="400" height="500">
             <img class="obras" src="imagenes/20191112_155911.jpg" width="400" height="500">
+            <img class="obras" src="imagenes/SISTEMAS/20200704_130028.jpeg" width="400" height="500">
+            <img class="obras" src="imagenes/SISTEMAS/20200704_135847.jpeg" width="400" height="500">
+            <img class="obras" src="imagenes/SISTEMAS/20200704_144250.jpeg" width="400" height="500">
+            <img class="obras" src="imagenes/SISTEMAS/20200704_150310.jpeg" width="400" height="500">
+            <img class="obras" src="imagenes/SISTEMAS/20200704_150315.jpeg" width="400" height="500">
             </div>
             </div>
         </section>
