--- a/nuestrosclientes.html
+++ b/nuestrosclientes.html
@@ -27,7 +27,7 @@
           <div class="container">            
             <h2 class="h2 mb-3">Confian en nosotros las siguientes Empresas y Organismos Oficiales:</h2>
               <div class="row">
-                <div class="col-12 col-md-9">
+                <div class="col-12 col sm-9 col-md-9">
                   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
