Modificacion imagenes obras y clientes

--- a/nuestrasobras.html
+++ b/nuestrasobras.html
@@ -27,20 +27,20 @@
             
     <main>
         
-        <section class="py=10">
-            <div class="container-fluid">
+        <section class="py=100">
+            <div class="container">
             <h2 class="h2">Obras en imagenes</h2>
-            <div class="row">
-                <div class="col-12 row-cols-md-4">
+            <div class="row align-items-start">
+                <div class="col-12">
             <img class="obras" src="imagenes/20191111_123728.jpg" width="400" height="500">
             <img class="obras" src="imagenes/20191112_121034.jpg" width="400" height="500">
             <img class="obras" src="imagenes/20191112_122128.jpg" width="400" height="500">
             <img class="obras" src="imagenes/20191112_155911.jpg" width="400" height="500">
             <img class="obras" src="imagenes/SISTEMAS/20200704_130028.jpeg" width="400" height="500">
-            <img class="obras" src="imagenes/SISTEMAS/20200704_135847.jpeg" width="400" height="500">
-            <img class="obras" src="imagenes/SISTEMAS/20200704_144250.jpeg" width="400" height="500">
-            <img class="obras" src="imagenes/SISTEMAS/20200704_150310.jpeg" width="400" height="500">
+            <img class="obras" src="imagenes/SISTEMAS/20200704_144250.jpeg" width="400" height="500">            
             <img class="obras" src="imagenes/SISTEMAS/20200704_150315.jpeg" width="400" height="500">
+            <img class="obras" src="imagenes/SISTEMAS/20190629_165713.jpg" width="400" height="500">
+            <img class="obras" src="imagenes/SISTEMAS/20210113_182146.jpeg" width="400" height="500">
             </div>
             </div>
         </section>
