--- a/nuestrosclientes.html
+++ b/nuestrosclientes.html
@@ -26,7 +26,7 @@
         <section class="py=100">
           <div class="container">            
             <h2 class="h2 mb-3">Confian en nosotros las siguientes Empresas y Organismos Oficiales:</h2>
-              <div class="row">
+              <div class="row align-items-start">
                 <div class="col-12 col sm-9 col-md-9">
                   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
