--- a/nuestrasobras.html
+++ b/nuestrasobras.html
@@ -27,20 +27,20 @@
             
     <main>
         
-        <section class="py=100">
-            <div class="container">
+        <section class="py=5">
+            <div class="container-fluid">
             <h2 class="h2">Obras en imagenes</h2>
-            <div class="row align-items-start">
-                <div class="col-12">
-            <img class="obras" src="imagenes/20191111_123728.jpg" width="400" height="500">
-            <img class="obras" src="imagenes/20191112_121034.jpg" width="400" height="500">
-            <img class="obras" src="imagenes/20191112_122128.jpg" width="400" height="500">
-            <img class="obras" src="imagenes/20191112_155911.jpg" width="400" height="500">
-            <img class="obras" src="imagenes/SISTEMAS/20200704_130028.jpeg" width="400" height="500">
-            <img class="obras" src="imagenes/SISTEMAS/20200704_144250.jpeg" width="400" height="500">            
-            <img class="obras" src="imagenes/SISTEMAS/20200704_150315.jpeg" width="400" height="500">
-            <img class="obras" src="imagenes/SISTEMAS/20190629_165713.jpg" width="400" height="500">
-            <img class="obras" src="imagenes/SISTEMAS/20210113_182146.jpeg" width="400" height="500">
+            <div class="row align-items-center">
+                <div class="col-12 ">
+            <img  src="imagenes/20191111_123728.jpg" width="400" height="500">
+            <img  src="imagenes/20191112_121034.jpg" width="400" height="500">
+            <img  src="imagenes/20191112_122128.jpg" width="400" height="500">
+            <img  src="imagenes/20191112_155911.jpg" width="400" height="500">
+            <img  src="imagenes/SISTEMAS/20200704_130028.jpeg" width="400" height="500">
+            <img  src="imagenes/SISTEMAS/20200704_144250.jpeg" width="400" height="500">            
+            <img  src="imagenes/SISTEMAS/20200704_150315.jpeg" width="400" height="500">
+            <img  src="imagenes/SISTEMAS/20190629_165713.jpg" width="400" height="500">
+            <img  src="imagenes/SISTEMAS/20210113_182146.jpeg" width="400" height="500">
             </div>
             </div>
         </section>
@@ -49,7 +49,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-6; col-md-6">
+                <div class="col-6; col-md-4">
                     <h2 class="h2">Ubicación</h2>
                     <p>Nuestra oficina se encuentra ubicada en:
                     Los Notros 155 - Villa la Angostura - Neuquen</p>
