--- a/nuestrasobras.html
+++ b/nuestrasobras.html
@@ -7,6 +7,8 @@
     <title>FibropTica SA - Empresa</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css"/>
+    <link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="main.css">   
  
 </head>
 <body>
@@ -46,19 +48,21 @@
             <div class="row">
                 <div class="col-6; col-md-6">
                     <h2 class="h2">Ubicación</h2>
-                    <p>Nuestra oficina se encuentra ubicada en:
-                    Los Notros 155 - Villa la Angostura - Neuquen</p>
-                    <div class="color">
-                        <a class="color" href="mailto:fibropticasa@gmail.com"> Mail: fibropticasa@gmail.com </a>
-                        <a class="color" href="tel:+5492944240518"> Cel: 2944 240518 </a>
-                        <a class="color" href="https://wa.me/+5492944240518"> WhatsApp 294 4240518 </a>              
+                    <p>Nuestra oficina esta ubicada en:<br>
+                    Los Notros 155  V. La Angostura  Nqn</p>
+
+                    <div class="color">                   
+                        <a class="color" href="tel:+5492944240518"> Cel: 2944 240518 </a>                              
                     </div>
-                     <div>  
-                         <ul>
-                             <li class="redes"><a class="redes" href="https://instagram.com/fibroptica?utm_medium=copy-link/" target="_blanck">Instagram</a></li>
-                             <li class="redes"><a class="redes" href="https://es-la.facebook.com/pg/FibropTica/posts/" target="_blanck">Facebook</a></li>
-                         </ul>    
-                     </div>
+
+                <div class=card>
+                    <div class="social-bar">
+                        <a href="mailto:fibropticasa@gmail.com" class="icon icon-mail" target="_blank"></a>
+                        <a href="https://wa.me/+5492944240518" class="icon icon-whatsapp" target="_blank"></a>
+                        <a href="https://instagram.com/fibroptica?utm_medium=copy-link/" Instagram" class="icon icon-instagram" target="_blank"></a>
+                        <a href="https://es-la.facebook.com/pg/FibropTica/posts/" Facebook" class="icon icon-facebook2" target="_blank"></a>
+                    </div>
+                </div>
                      <p>Derechos Reservados Guillermo Peveri 2021</p>
                 </div>
                 <div class="col-6; col-md-6">
