Mejoras imagenes carusel y formulario de contacto

--- a/nuestrosclientes.html
+++ b/nuestrosclientes.html
@@ -36,16 +36,16 @@
                         <img src="imagenes/clientes/avc.jpg" class="d-block w-100" alt="Logotipo AVC">
                       </div>
                       <div class="carousel-item">
-                        <img src="imagenes/clientes/epas.png" class="d-block w-100" alt="Logotipo EPAS">
+                        <img src="imagenes/clientes/epas.jpg" class="d-block w-100" alt="Logotipo EPAS">
                       </div>
                       <div class="carousel-item">
                         <img src="imagenes/clientes/epen.jpg" class="d-block w-100" alt="Logotipo EPEN">
                       </div>
                       <div class="carousel-item">
-                        <img src="imagenes/clientes/laanonima.png" class="d-block w-100" alt="Logotipo Supermercado La Anonima">
+                        <img src="imagenes/clientes/laanonima.jpg" class="d-block w-100" alt="Logotipo Supermercado La Anonima">
                       </div>
                       <div class="carousel-item">
-                        <img src="imagenes/clientes/netpatagon.png" class="d-block w-100" alt="Logotipo NetPatagon">
+                        <img src="imagenes/clientes/netpatagon.jpg" class="d-block w-100" alt="Logotipo NetPatagon">
                       </div>
                       <div class="carousel-item">
                         <img src="imagenes/clientes/optic.jpg" class="d-block w-100" alt="Logotipo OPTIC">
@@ -57,7 +57,7 @@
                         <img src="imagenes/clientes/suptodo.png" class="d-block w-100" alt="Logotipo Supermercado Todo">
                       </div>
                       <div class="carousel-item">
-                        <img src="imagenes/clientes/trex.png" class="d-block w-100" alt="Logotipo TREX">
+                        <img src="imagenes/clientes/trex.jpg" class="d-block w-100" alt="Logotipo TREX">
                       </div>  
                       <div class="carousel-item">
                         <img src="imagenes/clientes/mvla.png" class="d-block w-100" alt="Logotipo Municipio de Villa La Angostura">
